# fastapi_backend

./: .cursorrules  .dockerignore  .gitignore  ARCHITECTURE_ANALYSIS.md  Dockerfile  debug_agent_log.py  exceptions.py  main.py  pyproject.toml  run_tenant_migration.py  run_tenant_migration.sh  test_user_companies.py
.github/workflows/: deploy-azure.yml  tests.yml
chalicelib/: __init__.py  alembic.ini  alembic_tenant.ini  boto3_clients.py  bus.py  config.py  exceptions.py  logger.py  profilers.py  tenant_utils.py
chalicelib/alembic/: env.py
chalicelib/alembic_tenant/: env.py  post_write_hook.py  utils.py
chalicelib/blueprints/: __init__.py  attachment.py  cfdi_excluded.py  cfdi_export.py  coi.py  common.py  company.py  currency.py  dev_auth.py  docto_relacionado.py  efos.py  license_bp.py  notification.py  param.py  permission.py  poliza.py  product.py  regimen_fiscal.py  sat_query.py  scraper.py  status.py  superblueprint.py  user.py  workspace.py
chalicelib/controllers/: __init__.py  add_sync_request.py  attachment.py  cfdi.py  cfdi_excluded.py  cfdi_export.py  cognito.py  common.py  company.py  docto_relacionado.py  efos.py  enums.py  notification.py  notification_config.py  odoo.py  param.py  pasto_company.py  pdf_scraper.py  permission.py  poliza.py  sat_query.py  sat_scraper.py  sqs_message_receiver.py  ssh_helper.py  user.py  user_config.py  workspace.py
chalicelib/infra/: azure_blob_s3_shim.py  localstack_boto_clients.py
chalicelib/modules/: __init__.py
chalicelib/mx_edi/: utils.py
chalicelib/new/: isr.py  isr_deducciones.py  isr_exportaciones.py  iva.py  sqs_local.py
chalicelib/schema/: __init__.py  schemas.py
chalicelib/workers/: __init__.py  sat_sqs_pipeline.py  sqs_lambda_shim.py  verify_query_payload.py
dependencies/: __init__.py  common.py
helpers/: cfdi_resumen.py  pasto_common.py  product_helpers.py
routers/: attachment.py  cfdi.py  cfdi_excluded.py  cfdi_export.py  coi.py  company.py  dev_auth.py  docto_relacionado.py  efos.py  license_bp.py  notification.py  param.py  permission.py  poliza.py  product.py  regimen_fiscal.py  sat_query.py  scraper.py  status.py  user.py  workspace.py
routers/pasto/: cancel.py  company.py  config.py  metadata.py  reset.py  sync.py  worker.py  xml.py
scripts/: __init__.py  azure_alembic_upgrade.sh  dump_fastapi_http_routes.py  init_public_database.py  init_public_database.sh  local_sqs_worker.py  local_verification_batch_worker.py
scripts/sat/: __init__.py  _runtime.py  aca_daily_sat_sync.py  az_ws_enqueue_create_query.sh  az_ws_enqueue_jsonl.sh  az_ws_enqueue_sb_json.sh  az_ws_enqueue_verify.sh  az_ws_enqueue_verify_batch.sh  az_ws_sat_queues_status.sh  generate_sat_requests.py  manual_batch_reprocess.py  (+4 more)
tests/: README_TESTS.md  conftest.py  test_base.py  test_create_company_v2.py  test_cron_scraper.py  test_date_aggregation_fix.py  test_generador_chunks.py  test_http_route_parity.py  test_poliza.py  test_query_create_event_golden.py  test_search_bug_label.py  test_send_email.py
worker/: __init__.py  sat_sb_dispatch.py  service_bus_worker.py
(+476 files in other folders)
