[tool.poetry]
name = "solucioncp-backend-fastapi"
version = "40.0.0"
description = "solucioncp-backend migrated from Chalice to FastAPI."
authors = ["Moisés Navarro <moisalejandro@gmail.com>"]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
python-multipart = "*"
alembic = "*"
boto3 = "*"
cryptography = "*"
html2text = "*"
psycopg2-binary = "*"
SQLAlchemy = "^1"
Unidecode = "*"
OdooRPC = "0.10.1"
beautifulsoup4 = "*"
Jinja2 = "*"
openpyxl = "*"
pdfkit = "*"
xmltodict = "*"
pycfdi-credentials = "*"
click = "*"
Fabric = "*"
Flask-QRcode = "*"
stripe = "11.6"
python-dotenv = "*"
azure-servicebus = "^7.12.0"
pydantic = "*"
httpx = { extras = ["http2"], version = "*" }
lxml = "*"
retrying = "*"
boto3-type-annotations = "*"
pyjwt = "*"
bcrypt = ">=4.0"
joserfc = "^1.3.1"
# Legacy Chalice types (Blueprint, Response, errors) still imported by chalicelib; prod image uses --only main.
chalice = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
polyfactory = "*"
pytest = "*"
freezegun = "*"
memory-profiler = "*"
pytest-xdist = "*"
mypy = "*"
pre-commit = "*"
commitizen = "*"
pytest-profiling = "*"
snakeviz = "*"
ruff = "*"
moto = "*"
pytest-mock = "*"
pytest-benchmark = "*"
pytest-cov = "^6.2.1"
pydantic = { extras = ["email"], version = "^2.12.5" }
pytest-asyncio = "^1.3.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
exclude = "venv|chalicelib/common|chalicelib/alembic|common"

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "lxml.*",
    "alembic.*",
    "boto3.*",
    "botocore.exceptions.*",
    "sat.*",
    "mx_edi.*",
    "html2text.*",
    "pycfdi_credentials.*",
    "memory_profiler.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["venv.*", "chalicelib.alembic.env.*", "chalicelib.*"]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-n auto -m 'not third_party'"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "infra: real infrastructure related tests",
    "slow: slow tests",
    "to_solve: Errors to be solved",
    "third_party: tests that depends on third party services",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["*.key", "*.cer"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = [
    "SIM300",
    "E712",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*/versions/*" = ["D400", "D415", "PLR0915"]
"*/alembic/*" = ["INP001", "E501"]
"*/alembic_tenant/*" = ["INP001", "E501"]
"tests/*" = ["E501"]
"main.py" = ["E402"]
"scripts/sat/*.py" = ["E402", "E501"]
